--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,26 @@
-version: 2
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/2.0/configuration-reference
+version: 2.1
+
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  build:
-    working_directory: ~/angular-tester
+  say-hello:
+    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      ‐ image: circleci/node:10-browsers
+      - image: cimg/base:stable
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
-      ‐ checkout
-      ‐ restore_cache:
-          key: angular-tester-{{ .Branch }}-{{ checksum "package-lock.json" }}
-      ‐ run: npm install
-      ‐ save_cache:
-          key: angular-tester-{{ .Branch }}-{{ checksum "package-lock.json" }}
-          paths:
-            ‐ "node_modules"
-      ‐ run: npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
+      - checkout
+      - run:
+          name: "Say hello"
+          command: "echo Hello, World!"
+
+# Invoke jobs via workflows
+# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+workflows:
+  say-hello-workflow:
+    jobs:
+      - say-hello
